# ANSIpy

./: .gitignore  ANSIpy.code.md  README.md  pyproject.toml
docs/markdown/: ANSIpy.md  modules.md
docs/web/: ANSIpy.code.html  ANSIpy.html  genindex.html  index.html  modules.html  py-modindex.html  search.html
docs/web/_static/: doctools.js  documentation_options.js  jquery-3.6.0.js  jquery.js  searchtools.js  underscore-1.13.1.js
src/ANSIpy/: __init__.py  code.py  print.py  string.py  style.py
src/ANSIpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ANSIpy/code/: __init__.py  code.py  color.py  cursor.py  effect.py  erase.py  screen.py
tests/: string_test.py
