[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANSIpy"
version = "0.0.2"
authors = [
  { name="Giacomo Pizzamiglio", email="giacomo1.pizzamiglio@mail.polimi.it" },
]
description = "A simple package to manage easily ANSI codes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pizzmile/ANSIpy"
"Bug Tracker" = "https://github.com/pizzmile/ANSIpy/issues"